JumpScript/tests/baselines/reference/parserCastVersusArrowFunction1.errors.txt
tests/cases/conformance/parser/ecmascript5/Generics/parserCastVersusArrowFunction1.jump(2,10): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserCastVersusArrowFunction1.jump(2,12): error TS2304: Cannot find name 'a'.
tests/cases/conformance/parser/ecmascript5/Generics/parserCastVersusArrowFunction1.jump(4,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'v' must be of type '<T>() => number', but here has type '<T>(a: any) => number'.
tests/cases/conformance/parser/ecmascript5/Generics/parserCastVersusArrowFunction1.jump(5,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'v' must be of type '<T>() => number', but here has type '<T>(a: any, b: any) => number'.
tests/cases/conformance/parser/ecmascript5/Generics/parserCastVersusArrowFunction1.jump(6,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'v' must be of type '<T>() => number', but here has type '<T>(a?: number, b?: number) => number'.
tests/cases/conformance/parser/ecmascript5/Generics/parserCastVersusArrowFunction1.jump(8,10): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserCastVersusArrowFunction1.jump(8,13): error TS2304: Cannot find name 'a'.
tests/cases/conformance/parser/ecmascript5/Generics/parserCastVersusArrowFunction1.jump(9,10): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserCastVersusArrowFunction1.jump(9,13): error TS2304: Cannot find name 'a'.
tests/cases/conformance/parser/ecmascript5/Generics/parserCastVersusArrowFunction1.jump(9,13): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/conformance/parser/ecmascript5/Generics/parserCastVersusArrowFunction1.jump(9,16): error TS2304: Cannot find name 'b'.
tests/cases/conformance/parser/ecmascript5/Generics/parserCastVersusArrowFunction1.jump(10,10): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserCastVersusArrowFunction1.jump(10,13): error TS2304: Cannot find name 'a'.
tests/cases/conformance/parser/ecmascript5/Generics/parserCastVersusArrowFunction1.jump(10,20): error TS2304: Cannot find name 'b'.


==== tests/cases/conformance/parser/ecmascript5/Generics/parserCastVersusArrowFunction1.jump (14 errors) ====
    var v = <T>() => 1;
    var v = <T>a;
             ~
!!! error TS2304: Cannot find name 'T'.
               ~
!!! error TS2304: Cannot find name 'a'.
    
    var v = <T>(a) => 1;
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'v' must be of type '<T>() => number', but here has type '<T>(a: any) => number'.
    var v = <T>(a, b) => 1;
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'v' must be of type '<T>() => number', but here has type '<T>(a: any, b: any) => number'.
    var v = <T>(a = 1, b = 2) => 1;
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'v' must be of type '<T>() => number', but here has type '<T>(a?: number, b?: number) => number'.
    
    var v = <T>(a);
             ~
!!! error TS2304: Cannot find name 'T'.
                ~
!!! error TS2304: Cannot find name 'a'.
    var v = <T>(a, b);
             ~
!!! error TS2304: Cannot find name 'T'.
                ~
!!! error TS2304: Cannot find name 'a'.
                ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
                   ~
!!! error TS2304: Cannot find name 'b'.
    var v = <T>(a = 1, b = 2);
             ~
!!! error TS2304: Cannot find name 'T'.
                ~
!!! error TS2304: Cannot find name 'a'.
                       ~
!!! error TS2304: Cannot find name 'b'.